app/v2/istio-try-5-percent.yaml
apiVersion: v1
kind: List
items:
- kind: VirtualService
  apiVersion: networking.istio.io/v1alpha3
  metadata:
    name: hello-vs
  spec:
    hosts:
    - "*"
    gateways:
    - hello-gateway
    http:
      - match:
        - uri:
            prefix: "/"
        route:
        - destination:
            host: hello-world
            subset: v1
          weight: 95
        - destination:
            host: hello-world
            subset: v2
          weight: 5
- kind: DestinationRule
  apiVersion: networking.istio.io/v1alpha3
  metadata:
    name: hello-world
  spec:
    host: hello-world
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
